--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@usedappify/core",
-  "version": "0.11.2",
+  "version": "0.11.29",
   "main": "dist/cjs/src/index.js",
   "module": "dist/esm/src/index.js",
   "types": "dist/esm/src/index.d.ts",
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@metamask/detect-provider": "^1.2.0",
+    "@testing-library/react-hooks": "^7.0.2",
     "@uniswap/token-lists": "^1.0.0-beta.27",
     "ethers": "5.5.1",
     "lodash.merge": "^4.6.2",
